# valencianow

./: .tinyenv  README.md  dockerfile  readme.md
.devcontainer/: devcontainer.json
.github/scripts/: fetch_air_quality.sh  fetch_bikes_traffic.sh  fetch_cars_traffic.sh
.github/workflows/: append-air.yml  append-bikes.yml  append-cars.yml  append.yml  tinybird_cd.yml  tinybird_ci.yml  tinybird_release.yml
datasources/: cars.datasource  cars_clean_mv.datasource  cars_mv.datasource  traffic.datasource
docs/specs/: 2026-04-02-cars-traffic-datasource-migration.md
pipes/: cars_agg_day.pipe  cars_clean.pipe  cars_rt.pipe  traffic_day.pipe  traffic_rt.pipe
tinybird/datasources/: air.datasource  bikes.datasource  cars.datasource
tinybird/endpoints/: air_history.pipe  air_now.pipe  air_per_day.pipe  air_per_day_of_week.pipe  bikes_history.pipe  bikes_now.pipe  bikes_per_day.pipe  bikes_per_day_of_week.pipe  cars_history.pipe  cars_now.pipe  cars_per_day.pipe  cars_per_day_of_week.pipe
ui/: .gitignore  dockerfile  pyproject.toml
ui/scripts/: geocode_sensors.py
ui/src/valencianow/: app.py  components.py  config.py  data.py  maps.py
ui/src/valencianow/static/: sensor_addresses.json
