[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valencianow"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.2",
    "plotly>=5",
    "pandas>=2",
    "pytz>=2024",
    "pydeck>=0.9.1",
]

[project.scripts]
valencianow = "valencianow.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/valencianow"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
